# polars-utils

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: 01_basic_example.py  02_type_coercion_example.py  03_null_handling_example.py  04_multiple_column_analysis.py  05_performance_example.py  examples.ipynb  histogram_example.py  join_analysis_demo.ipynb  join_analysis_example.py  regex_search_example.py  search_columns_example.py
examples/data/: customers.csv  orders.csv  regions.csv
src/polars_utils/: __init__.py  extensions.py
tests/: test_extensions.py
