[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polars-utils"
version = "0.1.0"
authors = [
  { name="Jung Hoon Son" },
]
description = "Utilities for Polars DataFrame analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=1.17.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/junghoon_son/polars-utils"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"] 